# mxx

./: README.md  dev-install.ps1  main.py  pyproject.toml
example/: README.md  pyproject.toml
example/src/mxxp_plugin_example/: __init__.py  __plugin__.py
logs/: log-2025-11-29.txt
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
plugins/check-completion/: README.md  pyproject.toml
plugins/check-completion/src/mxxp_check_completion/: __init__.py  __plugin__.py  commands.py  manager.py
plugins/check-free/: pyproject.toml
plugins/check-free/src/mxxp_check_free/: __init__.py  __plugin__.py
plugins/check-single-instance/: README.md  pyproject.toml
plugins/check-single-instance/src/mxxp_check_single_instance/: __init__.py  __plugin__.py
plugins/scoop/: pyproject.toml
plugins/scoop/src/mxxp_scoop/: __init__.py  __plugin__.py
plugins/test-command/: README.md  pyproject.toml
plugins/test-command-override/: README.md  pyproject.toml
plugins/test-command-override/src/mxxp_test_command_override/: __init__.py  __plugin__.py
plugins/test-command/src/mxxp_test_command/: __init__.py  __plugin__.py
scripts/: dev-install.ps1
src/mxx/: __main__.py
src/mxx/app/: config.py  mgr.py
src/mxx/auto_profile/: mgr.py  model.py
src/mxx/cli/: __init__.py  app.py  config.py  main.py  plugin_aware.py  run.py
src/mxx/click/: action.py  app.py  auto.py  maa.py  main.py
src/mxx/core/: config.py  model_load.py  parser.py  profile_resolver.py  runner.py
src/mxx/maaconfig/: mgr.py  model.py
src/mxx/models/: base.py  ld.py  maa.py  profile.py
src/mxx/plugin_system/: __init__.py  i.py  imports.py  interface.py  loader.py  plugin.py
src/mxx/templates/: ld.template.toml  maa.template.toml  profile.template.toml
src/mxx/utils/: file.py  json.py  kill.py  pattern.py  process.py
src/mxx/utils/nofuss/: arg_extract.py  json.py  resolveEditor.py  sleep.py  subprocess.py  toml.py
tests/: test_config_and_load.py  test_json_toml.py  test_models.py  test_nested.py  test_pattern.py  test_util_file.py
