[project]
name = "mxx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cel-ti", email = "96926560+cel-ti@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "toml>=0.10.2",
]

[project.scripts]
mxx = "mxx.click.main:cli"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ldpx>=0.3.0",
    "pytest>=9.0.1",
]
