[project]
name = "mxxp-plugin-example"
version = "0.1.0"
description = "Comprehensive example plugin demonstrating all MXX plugin capabilities"
readme = "README.md"
authors = [
    { name = "cel-ti", email = "96926560+cel-ti@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
