[project]
name = "mxxp-check-completion"
version = "0.1.10"
description = "Plugin to track and prevent duplicate profile runs per day"
readme = "README.md"
authors = [
    { name = "cel-ti", email = "96926560+cel-ti@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
check-completion = "check_completion:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
