[project]
name = "mxxp-check-free"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cel-ti", email = "96926560+cel-ti@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
check-free = "mxxp_check_free:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
