[project]
name = "mxxp-test-command-override"
version = "0.1.8"
description = "Test plugin that overrides/extends the test command behavior"
readme = "README.md"
authors = [
    { name = "cel-ti", email = "96926560+cel-ti@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
